[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseppo"
version = "0.1.3"
description = "Open SEPPO Tools — geospatial and SAR processing utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Earth Big Data LLC", email = "info@earthbigdata.com" },
]
keywords = ["SAR", "geospatial", "remote sensing", "NISAR", "raster", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

# Minimal runtime deps — no GDAL/HDF stack required to install the search tool.
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
nisar = [
    "earthaccess>=0.8",
    "h5py>=3.8",
    "h5netcdf>=1.1",
    "numpy>=1.24",
    "rasterio>=1.3",
    "s3fs>=2023.1",
    "xarray>=2023.1",
    "scipy>=1.10",
    "pyproj>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
seppo_nisar_search            = "openseppo.cli.nisar_search:main"
seppo_earthaccess_credentials = "openseppo.cli.earthaccess_credentials:main"
seppo_nisar_gcov_convert      = "openseppo.cli.nisar_gcov_convert:main"

[project.urls]
Homepage = "https://earthbigdata.com/seppo"
Repository = "https://github.com/EarthBigData/openSEPPO"
"Bug Tracker" = "https://github.com/EarthBigData/openSEPPO/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openseppo"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
